// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`前缀装饰器 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  text-align: left;
  color: inherit;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

[disabled] > .c1 {
  color: rgba(0,0,0,0.38);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > input.sinoui-base-input__input,
.c0 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c0 > input.sinoui-base-input__input::-moz-placeholder,
.c0 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c0 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input:-ms-input-placeholder,
.c0 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-ms-clear,
.c0 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > input.sinoui-base-input__input:focus,
.c0 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > input.sinoui-base-input__input:invalid,
.c0 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

<div
  className="c0 sinoui-base-input"
  data-testid="baseInput"
  onClick={[Function]}
>
  <div
    className="c1 sinoui-input-adornment sinoui-input-adornment--start sinoui-input-adornment--text"
  >
    <p
      className="c2 sinoui-typography sinoui-typography--body1"
      color="inherit"
      type="body1"
    >
      ￥
    </p>
  </div>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`后缀装饰器 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  text-align: left;
  color: inherit;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

[disabled] > .c1 {
  color: rgba(0,0,0,0.38);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > input.sinoui-base-input__input,
.c0 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c0 > input.sinoui-base-input__input::-moz-placeholder,
.c0 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c0 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input:-ms-input-placeholder,
.c0 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-ms-clear,
.c0 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > input.sinoui-base-input__input:focus,
.c0 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > input.sinoui-base-input__input:invalid,
.c0 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

<div
  className="c0 sinoui-base-input"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="c1 sinoui-input-adornment sinoui-input-adornment--end sinoui-input-adornment--text"
  >
    <p
      className="c2 sinoui-typography sinoui-typography--body1"
      color="inherit"
      type="body1"
    >
      千克
    </p>
  </div>
</div>
`;

exports[`正确渲染BaseInput 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > input.sinoui-base-input__input,
.c0 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c0 > input.sinoui-base-input__input::-moz-placeholder,
.c0 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c0 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input:-ms-input-placeholder,
.c0 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-ms-clear,
.c0 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > input.sinoui-base-input__input:focus,
.c0 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > input.sinoui-base-input__input:invalid,
.c0 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

<div
  className="c0 sinoui-base-input"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染disabled属性下的BaseInput 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  color: rgba(0,0,0,0.38);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > input.sinoui-base-input__input,
.c0 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c0 > input.sinoui-base-input__input::-moz-placeholder,
.c0 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c0 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input:-ms-input-placeholder,
.c0 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-ms-clear,
.c0 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > input.sinoui-base-input__input:focus,
.c0 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > input.sinoui-base-input__input:invalid,
.c0 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

<div
  className="c0 sinoui-base-input sinoui-base-input--disabled"
  data-testid="baseInput"
  disabled={true}
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染全宽模式下的BaseInput 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
  width: 100%;
}

.c0 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > input.sinoui-base-input__input,
.c0 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c0 > input.sinoui-base-input__input::-moz-placeholder,
.c0 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c0 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input:-ms-input-placeholder,
.c0 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-ms-clear,
.c0 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > input.sinoui-base-input__input:focus,
.c0 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > input.sinoui-base-input__input:invalid,
.c0 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

<div
  className="c0 sinoui-base-input"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染多行输入框 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
  padding: 3.5px 0 4.5px;
}

.c0 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > input.sinoui-base-input__input,
.c0 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c0 > input.sinoui-base-input__input::-moz-placeholder,
.c0 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c0 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input:-ms-input-placeholder,
.c0 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-ms-clear,
.c0 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > input.sinoui-base-input__input:focus,
.c0 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > input.sinoui-base-input__input:invalid,
.c0 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

<div
  className="c0 sinoui-base-input sinoui-base-input--multiline"
  data-testid="baseInput"
  onClick={[Function]}
>
  <textarea
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <textarea
    aria-hidden="true"
    className="sinoui-base-input__input"
    style={
      Object {
        "height": 0,
        "left": 0,
        "maxHeight": 0,
        "minHeight": 0,
        "overflow": "hidden",
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
        "transform": "translateZ(0)",
        "visibility": "hidden",
      }
    }
    tabIndex={-1}
  />
</div>
`;

exports[`渲染带后缀的支持清除功能的输入框 1`] = `
.c4 {
  margin: 0;
  padding: 0;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  text-align: left;
  color: inherit;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  margin-left: 8px;
}

[disabled] > .c1 {
  color: rgba(0,0,0,0.38);
}

.c3 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

[disabled] > .c3 {
  color: rgba(0,0,0,0.38);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > input.sinoui-base-input__input,
.c0 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c0 > input.sinoui-base-input__input::-moz-placeholder,
.c0 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c0 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input:-ms-input-placeholder,
.c0 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-ms-clear,
.c0 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > input.sinoui-base-input__input:focus,
.c0 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > input.sinoui-base-input__input:invalid,
.c0 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

.c0 > .sinoui-input-adornment--end {
  opacity: 1;
  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4,0.0,1,1) 0ms,opacity 250ms cubic-bezier(0.4,0.0,1,1) 0ms,color 250ms cubic-bezier(0.4,0.0,1,1) 0ms;
  -webkit-transition: transform 250ms cubic-bezier(0.4,0.0,1,1) 0ms,opacity 250ms cubic-bezier(0.4,0.0,1,1) 0ms,color 250ms cubic-bezier(0.4,0.0,1,1) 0ms;
  transition: transform 250ms cubic-bezier(0.4,0.0,1,1) 0ms,opacity 250ms cubic-bezier(0.4,0.0,1,1) 0ms,color 250ms cubic-bezier(0.4,0.0,1,1) 0ms;
}

.c0 > .sinoui-base-input__input {
  margin-right: -26px;
}

.c0 > .sinoui-base-input__clear {
  -webkit-transform: translateX(27px);
  -ms-transform: translateX(27px);
  transform: translateX(27px);
  opacity: 0;
  pointer-events: none;
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,opacity 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,color 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,opacity 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,color 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,opacity 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,color 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c0:hover > .sinoui-input-adornment--end {
  opacity: 0;
  pointer-events: none;
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,opacity 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,color 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,opacity 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,color 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,opacity 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms,color 150ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c0:hover > .sinoui-base-input__clear {
  opacity: 1;
  pointer-events: auto;
  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4,0.0,1,1) 0ms,opacity 250ms cubic-bezier(0.4,0.0,1,1) 0ms,color 250ms cubic-bezier(0.4,0.0,1,1) 0ms;
  -webkit-transition: transform 250ms cubic-bezier(0.4,0.0,1,1) 0ms,opacity 250ms cubic-bezier(0.4,0.0,1,1) 0ms,color 250ms cubic-bezier(0.4,0.0,1,1) 0ms;
  transition: transform 250ms cubic-bezier(0.4,0.0,1,1) 0ms,opacity 250ms cubic-bezier(0.4,0.0,1,1) 0ms,color 250ms cubic-bezier(0.4,0.0,1,1) 0ms;
}

.c2 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

@media (hover:none) {
  .c0:hover > .sinoui-base-input__clear {
    display: none;
  }

  .c0:hover > .sinoui-input-adornment--end {
    opacity: 1;
  }
}

<div
  className="c0 sinoui-base-input"
  data-testid="input"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="123"
  />
  <div
    className="c1 sinoui-input-adornment sinoui-input-adornment--end sinoui-base-input__clear"
  >
    <svg
      aria-hidden="true"
      className="c2 sinoui-svg-icon"
      focusable="false"
      onClick={[Function]}
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </div>
  <div
    className="c3 sinoui-input-adornment sinoui-input-adornment--end sinoui-input-adornment--text"
  >
    <p
      className="c4 sinoui-typography sinoui-typography--body1"
      color="inherit"
      type="body1"
    >
      Kg
    </p>
  </div>
</div>
`;

exports[`渲染支持清除功能的输入框 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > input.sinoui-base-input__input,
.c0 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c0 > input.sinoui-base-input__input::-moz-placeholder,
.c0 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c0 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input:-ms-input-placeholder,
.c0 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-ms-clear,
.c0 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > input.sinoui-base-input__input:focus,
.c0 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > input.sinoui-base-input__input:invalid,
.c0 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

<div
  className="c0 sinoui-base-input"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`设置minRows和maxRows 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
  padding: 3.5px 0 4.5px;
}

.c0 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > input.sinoui-base-input__input,
.c0 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c0 > input.sinoui-base-input__input::-moz-placeholder,
.c0 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c0 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input:-ms-input-placeholder,
.c0 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input.sinoui-base-input__input::-ms-clear,
.c0 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > input.sinoui-base-input__input:focus,
.c0 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > input.sinoui-base-input__input:invalid,
.c0 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c1 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c1 > input.sinoui-base-input__input,
.c1 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c1 > input.sinoui-base-input__input::-moz-placeholder,
.c1 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c1 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c1 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c1 > input.sinoui-base-input__input:-ms-input-placeholder,
.c1 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c1 > input.sinoui-base-input__input::-ms-clear,
.c1 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c1 > input.sinoui-base-input__input:focus,
.c1 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c1 > input.sinoui-base-input__input:invalid,
.c1 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c1.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c1 .sinoui-base-input__clear {
  width: 18px;
}

.c1 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

<div>
  <div
    className="c0 sinoui-base-input sinoui-base-input--multiline"
    data-testid="baseInput"
    onClick={[Function]}
  >
    <textarea
      className="sinoui-base-input__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      rows={2}
    />
    <textarea
      aria-hidden="true"
      className="sinoui-base-input__input"
      style={
        Object {
          "height": 0,
          "left": 0,
          "maxHeight": 0,
          "minHeight": 0,
          "overflow": "hidden",
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "transform": "translateZ(0)",
          "visibility": "hidden",
        }
      }
      tabIndex={-1}
    />
  </div>
  <div
    className="c1 sinoui-base-input"
    data-testid="baseInput"
    onClick={[Function]}
  >
    <input
      className="sinoui-base-input__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    />
  </div>
</div>
`;
